--- a/alanlib_ita/lib_messaggi_libreria.html
+++ b/alanlib_ita/lib_messaggi_libreria.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.9.7-Alpha,</span>
+<span id="revnumber">versione 0.9.8-Alpha,</span>
 <span id="revdate">2018-11-30</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -580,7 +580,8 @@ rispettivamente). Es. <code>ogg2_non_posseduto</code>.</p>
 <li>
 <p><code>png1</code> e <code>png2</code> indicano che il <code>$</code> nel messaggio fa rigerimento ad un
 parametro che è un attore. Questo tipo di messaggio è adatto ad essere
-utilizzato solo con attori. Es. <code>png1_non_apprezzerebbe</code>.</p>
+utilizzato solo con attori.
+Es. <code>png1_non_gradirebbe_sg</code> e <code>png1_non_gradirebbe_pl</code>.</p>
 </li>
 <li>
 <p><code>_sg</code> e <code>_pl</code> rappresentano varianti di un medesimo messaggio, il primo
@@ -842,7 +843,7 @@ italiano del modulo delle classi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.9.7-Alpha<br>
+Versione 0.9.8-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
